@@ -9,6 +9,23 @@ wx_version="$(cat ../WX_VERSION.txt)"
 pushd ~/wxWidgets-$wx_version
 mkdir release
 cd release
-../configure --enable-monolithic --disable-shared
+
+../configure --disable-shared\
+ --disable-sys-libs\
+ --without-libpng\
+ --without-libjpeg\
+ --without-libtiff\
+ --without-expat\
+ --without-liblzma\
+ --without-opengl\
+ --disable-glcanvasegl\
+ --disable-mediactrl\
+ --disable-webview\
+ --disable-pnm\
+ --disable-gif\
+ --disable-pcx\
+ --disable-iff\
+ --disable-svg
+
 make -j$(nproc)
 popd
